Import of PANYU/RSA-Toolkit-0.03 from CPAN.
gitpan-cpan-distribution: RSA-Toolkit
gitpan-cpan-version:      0.03
gitpan-cpan-path:         PANYU/RSA-Toolkit-0.03.tar.gz
gitpan-cpan-author:       PANYU
gitpan-cpan-maturity:     released

--- a/lib/RSA/Toolkit.pod
+++ b/lib/RSA/Toolkit.pod
@@ -10,6 +10,8 @@ RSA::Toolkit - Perl extension for RSA Administration Toolkit
 
   $user = $object->fetch_users;
 
+  $groups = $object->fetch_groups;
+
   $token = $user->get_inf('token');
  
   $hash_ref = $user->dump;
@@ -55,19 +57,35 @@ C<fetch_users> is the main method to fetch users' information.
 By default, without providing any option, the method returns all users in RSA database.
 In the example, each time you call C<fetch_users>, it returns a L<RSA::Toolkit::User> object.
 
-=head3 Options
+=head3 C<field>, C<type>, and C<value>
 
   # Return the users with the token expired
   $rsa->fetch_users(field => 7, type => 4);
+
   # Return the users with the token will be expired in 10 days
   $rsa->fetch_users(field => 7, type => 7, value => 10);
+
   # Return the users with the first name equal 'Peter'
   $rsa->fetch_users(field => 2, filter => 2, value => 'Peter');
 
-There are 3 options for this mothed, which are C<field>, C<type>, and C<value>. To filter 
-the users with conditions, you need to issue the correct combination of these 3 options.
+The combination of the 3 options C<field>, C<type>, and C<value> is used for filtering users by fields.
+To filter the users with conditions, you need to issue the correct combination of these 3 options.
 Failure to close the search properly may cause the method failed.
 For detailed information about these options, please read the description for C<Sd_ListUsersByField> on "RSA Administration Toolkit Reference Guide".
+
+=head3 C<group>
+
+  # Return the users belong to a certain group.
+  $rsa->fetch_users(group => 'a group name');
+
+This option is used for listing users by a group name. If you are not sure what the exact group name is,
+call C<fetch_groups> first.
+
+=head2 C<fetch_user>
+
+  $user = $rsa->fetch_user($login);
+
+It is similar to C<fetch_user>, but only one L<RSA::Toolkit::User> object will be returned. This method is used for listing a user's information by login name. A valid login name is required as the option.
 
 =head2 C<get_inf>
 
@@ -87,6 +105,12 @@ Get values of each field. If the field names are uncertain, call L<get_inf_field
 Before calling C<get_inf>, you may not know the exact name of the available fields that a user has.
 This method is to list the fields belong to a user.
 
+=head2 C<fetch_groups>
+
+  $groups = $object->fetch_groups;
+
+This method returns an array reference to the groups in RSA database. The elements of this array are the names of the groups.
+
 =head2 C<dump>
 
   $hash_ref = $user->dump;
@@ -103,7 +127,7 @@ Thanks for the help from Hai Bin Zhang, who is my colleague and friend with expe
 
 =head1 AUTHOR
 
-Pan Yu, E<lt>xiaocong[AT]vip.163.com<gt>
+Pan Yu, E<lt>xiaocong[AT]vip.163.com E<gt>
 
 =head1 COPYRIGHT AND LICENSE
 
