--- a/Changes
+++ b/Changes
@@ -4,3 +4,6 @@ Revision history for Perl extension RSA::Toolkit.
 	- original version; created by h2xs 1.23 with options
 	-A -n RSA::Toolkit
 
+0.03  Sat Apr  16 10:25:16 2011
+	- Bugs fixed
+	- 2 new functions are available
